--- a/.env.development.local
+++ b/.env.development.local
@@ -1,5 +1,5 @@
 # hostname or ip from the moonraker instance
-VUE_APP_HOSTNAME=localhost
+VUE_APP_HOSTNAME=192.168.1.204
 
 # port from the moonraker instance
 VUE_APP_PORT=7125
@@ -11,5 +11,5 @@ VUE_APP_RECONNECT_INTERVAL=5000
 VUE_APP_INSTANCES_DB="moonraker"
 
 # defaults for multi language tests
-VUE_APP_I18N_LOCALE=en
+VUE_APP_I18N_LOCALE=sv
 VUE_APP_I18N_FALLBACK_LOCALE=en
